# audio-transcriber

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  TASKS.md  docker-compose.yml  env.example  justfile  pyproject.toml  test.env
docker/: Dockerfile
src/transcripter/: __init__.py  cli.py  config.py  logging.py  models.py  speaker_naming_service.py  transcription_service.py
tests/: __init__.py  test_cli.py  test_config.py  test_models.py  test_speaker_naming_service.py  test_transcription_service.py
